# dunders

./: .gitignore  CLAUDE.md  LICENSE  README.md  install_global.sh  pyproject.toml
docs/: textual-ui-cookbook.md
docs/superpowers/plans/: 2026-06-07-file-panel-mouse-wheel-cursor.md  2026-06-07-relay-kitty-transparent-handover.md  2026-06-15-tree-snippet-dunder.md  2026-06-18-document-viewer-markitdown.md  2026-06-19-markdown-large-file-performance.md  2026-06-20-database-dunder.md  2026-06-20-dunder-file-autodetect.md  2026-06-27-file-associations.md  2026-06-27-form-editor.md
docs/superpowers/specs/: 2026-06-15-tree-snippet-dunder-design.md  2026-06-18-document-viewer-markitdown-design.md  2026-06-19-markdown-large-file-performance-design.md  2026-06-20-database-dunder-design.md  2026-06-20-dunder-file-autodetect-design.md  (+2 more)
dunders/: HELP.md  __init__.py  app.py  main.py
dunders/ai/: __init__.py  config.py  guardrails.py  presets.py  pricing.py  provider.py  secrets.py  service.py  types.py
dunders/config/: defaults.py  sql_history.py  user_config.py
dunders/fm/: __init__.py  actions.py  ai_config_dialog.py  associations.py  associations_loader.py  cmd_history_dialog.py  commandline.py  csv_viewer.py  db_console.py  dialogs.py  doc_converter.py  file_colors.py  file_entry.py  file_panel.py  find_file.py  find_results.py  form_dialog.py  forms_service.py  hex_viewer.py  image_viewer.py  key_probe.py  keymap.py  line_source.py  markdown_viewer.py  netrc_store.py  nl_command.py  panel_view.py  row_source.py  scan.py  sort.py  user_menu_dialog.py  user_menu_loader.py  vfs_engine.py  vfs_local.py  viewer.py
dunders/forms/: __init__.py  context.py  result.py  schema.py  types.py
dunders/sdk/: __init__.py
dunders/themes/: light.yaml
dunders/windowing/: __init__.py  menu_bar.py  palette.py  scrollbar.py  status_bar.py
examples/markdown/: demo.md
tests/: conftest.py  test_buffer.py  test_fold_engine.py  test_fold_engine_indent_integration.py  test_indent_fold_scanner.py  test_key_probe.py  test_macro.py  test_search_core.py  test_search_macro.py  test_search_navigation.py  test_search_panel.py  test_search_panel_keyboard_nav.py  test_search_replace.py  test_user_config.py
tests/ai/: test_config.py  test_guardrails.py  test_ollama.py  test_pricing.py  test_providers.py  test_secrets.py  test_service.py
tests/config/: test_sql_history.py
tests/core/: test_vfs_local.py  test_vfs_locator.py  test_vfs_registry.py
tests/fm/: test_actions.py  test_ai_config_app.py  test_app_skeleton.py  test_archive_create.py  test_archive_extract.py  test_archive_guard.py  test_associations.py  test_associations_app.py  test_associations_loader.py  test_associations_menu_app.py  test_async_scan.py  test_bookmarks_app.py  test_cmd_history_app.py  test_cmdline_panel_nav.py  test_commandline.py  test_commandline_stub.py  test_copy_path_button.py  test_csv_viewer.py  test_db_console.py  test_dialogs.py  test_doc_converter.py  test_doc_viewer_routing.py  test_docker_provider.py  test_file_colors.py  test_file_entry.py  test_file_entry_loc.py  test_file_panel.py  test_file_panel_quick_search.py  test_file_panel_stub.py  test_find_file.py  test_find_file_dialog.py  test_find_results.py  test_form_dialog.py  test_form_routing.py  test_forms_app.py  test_ftp_provider.py  test_help_app.py  test_hex_viewer.py  test_image_viewer.py  test_insert_filename.py  (+34 more)
tests/forms/: test_context.py  test_result.py  test_schema.py  test_types.py
tests/windowing/: test_clipboard.py  test_commands.py  test_editor_content.py  test_editor_highlight.py  test_editor_widget.py  test_focus_panel_reveal.py  test_frame.py  test_highlight.py  test_integration.py  test_language_picker.py  test_menu_bar.py  test_open_file.py  test_palette.py  test_replace_dialog.py  test_smoke.py  test_theme_256_safe.py  test_tree_content.py  test_tree_data.py  test_tree_model.py  test_tree_widget.py
tyui/: __init__.py  app.py  main.py
tyui/config/: defaults.py
tyui/fm/: __init__.py  actions.py  commandline.py  dialogs.py  file_colors.py  file_entry.py  file_panel.py  hex_viewer.py  keymap.py  scan.py  sort.py  viewer.py
tyui/themes/: dark.yaml
tyui/widgets/: confirm_dialog.py
tyui/windowing/: __init__.py  command_palette.py  commands.py  content.py  desktop.py  frame.py  helpers.py  manager.py  menu_bar.py  status_bar.py  window.py
(+89 files in other folders)
