[project]
name = "dunders"
version = "0.1.0"
description = "dunders — fill in the blank: an open-source terminal platform on Textual where everything is a panel. We ship the underscores; you write what goes between them — a dual-pane EVERYTHING manager: files, editor, LLM-agent CLI, and whatever you plug in."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "tumikosha", email = "tumikosha@gmail.com" },
]
keywords = [
    "tui",
    "terminal",
    "textual",
    "editor",
    "file-manager",
    "norton-commander",
    "mc",
    "midnight-commander",
    "folding",
    "macros",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=3.0.0",
    "ptyprocess>=0.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Opt-in SFTP support (the sftp: dunder). paramiko is LGPL — kept out of the
# default install so the base package stays permissive-only.
sftp = ["paramiko>=3.0"]
# Opt-in image-to-ASCII viewer (F3 on an image). Pillow is HPND-licensed
# (permissive), kept out of the default install to stay dependency-light.
image = ["pillow>=10"]
# Opt-in document viewer (F3 on a PDF/office file → Markdown). markitdown is
# MIT; kept out of the default install to stay dependency-light.
office = ["markitdown[pdf,docx,pptx,xlsx]>=0.0.1"]
# Opt-in database dunder (the db: dunder). dbset wraps SQLAlchemy 2.x; the
# Postgres (psycopg2) and MySQL (pymysql) DBAPI drivers are bundled so
# postgresql:// and mysql:// URLs work out of the box (SQLite needs no driver).
# Kept out of the default install to stay light.
db = ["dbset>=0.1", "psycopg2-binary>=2.9", "pymysql>=1.1"]
# LLM foundation (the __ai__ dunder / app.ai). NO dependency: every provider
# (Anthropic, OpenAI, Azure, Ollama, groq, Nvidia, DeepSeek, Qwen) talks its REST
# API directly over stdlib HTTP — `pip install dunders` is enough. The extra is
# kept (empty) so `dunders[ai]` / `dunders[all]` stay valid.
ai = []
# Opt-in date recognition for the `date` form-field type. dateparser is BSD;
# kept out of the default install so the base package stays dependency-light.
# Absent → a `date` field behaves as a plain string (passthrough).
forms = ["dateparser>=1.2"]
# Everything opt-in in one extra (self-referential) — what the quick-install
# one-liner pulls so a single line installs the full-featured app.
all = ["dunders[sftp,image,office,db,ai,forms]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyftpdlib>=1.5",  # local FTP server for FtpProvider integration tests
    "paramiko>=3.0",   # SFTP client + an in-process SFTP server for tests
    "ruff>=0.5",
    "build>=1.2",
    "twine>=5.0",
    "dbset>=0.1",     # database dunder adapter tests (in-memory/temp SQLite)
]

[project.urls]
Homepage      = "https://github.com/tumikosha/dunders"
Repository    = "https://github.com/tumikosha/dunders"
Issues        = "https://github.com/tumikosha/dunders/issues"
Documentation = "https://github.com/tumikosha/dunders#readme"

[project.scripts]
dunders = "dunders.main:main"
__ = "dunders.main:main_we"
__w = "dunders.main:main_wew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dunders"]

[tool.hatch.build.targets.wheel.force-include]
"dunders/themes/dark.yaml"  = "dunders/themes/dark.yaml"
"dunders/themes/light.yaml" = "dunders/themes/light.yaml"

[tool.hatch.build.targets.sdist]
include = [
    "dunders/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "tests",
    "docs",
    "vibe",
    ".omc",
    ".idea",
    ".venv",
    "uv.lock",
    "claude.sh",
    "install_global.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
